<resources>
    <string name="app_name">静音门</string>

    <string name="guangqi">光企：</string>
    <string name="shangxiafang">上下方：</string>
    <string name="boligao">玻璃高：</string>
    <string name="bolikuan">玻璃宽：</string>
    <string name="biankuanggao">边框高：</string>
    <string name="shangxiahua">上下滑：</string>
    <string name="zhongkongtiaokuan">中空条宽：</string>
    <string name="zhongkongtiaogao">中空条高：</string>
    
    <string name="jgw_waikuanggao">外框高：</string>
    <string name="jgw_waikuangkuan">外框款：</string>
    <string name="jgw_shangao">扇高：</string>
    <string name="jgw_shankuan">扇宽：</string>
    <string name="jgw_wanggao">网高：</string>
    <string name="jgw_wangkuan">网宽：</string>

    <string name="jym_door_height">门洞高：</string>
    <string name="jym_door_width">门洞宽：</string>
</resources>
